2011-07-01  Michal Pryc <Michal.Pryc@Oracle.Com>

	* configure.in: Bump to 1.170.0
	* common/nwam-scf.c:
	* common/nwam-scf.h:
	* common/nwamui_daemon.c:
	* common/Makefile.am:
	* daemon/notify.c:
	* data/nwam-manager-properties:
	  Updated to fit minilander project and fix CR 7029824.

2011-06-27  Michal Pryc <Michal.Pryc@Oracle.Com>

	* capplet/nwam_conn_stat_panel.c:
	* capplet/nwam_pref_dialog.c:
	* capplet/nwam_tree_view.c:
	* capplet/nwam_vpn_pref_dialog.c:
	* daemon/notify.c:
	* data/nwam-manager-properties:
	* ui/nwam-manager-properties.ui:
	* configure.in:
	  Updated strings and dialogs for the Highlander project,
	  Bug fixes for CR:7042517 and CR 7026071
	  Bump the version to 1.164.1

2011-06-27  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_profile_panel.c: (nwam_profile_panel_set_property),
	(apply), (nwam_profile_panel_finalize),
	(nwam_object_activate_toggled_cb),
	(nwam_object_toggled_cell_sensitive_func): Removed #if 0 blocks.
	* help/C/nwam-manager.xml: Merged CR#7042534.

2011-06-22  Yong Sun <y.yong.sun@oracle.com>

	* po/*.po: updated message translation.

2011-06-22  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_rules_dialog.c (dialog_get_window),
	(nwam_pref_init):
	* capplet/nwam_vpn_pref_dialog.c (on_rules_button_clicked): Fixed
	CR#7057684.

2011-04-08  Lin Ma  <lin.ma@oracle.com>

	* configure.in: Bump to 1.164.0

2011-04-01  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_profile_dialog.c (nwam_pref_init),
	(dialog_get_window): Fixed 7029953 [gnome2.30][nwam] Cannot edit a
	network profile

2011-03-11  Lin Ma  <lin.ma@oracle.com>

	* configure.in: Bump to 1.162.0

2011-02-28  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_env_pref_dialog.c (populate_panels_from_env),
	(on_ns_source_clicked), (on_ns_selection_clicked),
	(on_ns_text_changed), (update_nsswitch_related_widgets), (refresh):
	Rework 7006158, which applies only reload all/cancel an nwam
	location. Fixed 7006036.
	* common/nwamui_env.c (nwamui_object_real_validate):
	Fixed 7006036.
